--- a/rasterizer/Makefile
+++ b/rasterizer/Makefile
@@ -1,15 +1,16 @@
-CC=g++
+CXX=g++ -g
 LDLIBS=-lGL -lGLU -lglut 
 CFLAGs=-c -Wall -g -O
+CXXFLAGs=-c -Wall -g -O
 OBJ= main.o matrix.o vector.o draw.o
 TARGET= rasterizer
 
 	
 all: 	$(OBJ)
-	$(CC) $(OBJ) -o $(TARGET) $(LDLIBS)
+	$(CXX) $(OBJ) -o $(TARGET) $(LDLIBS) $(CXXFLAGS) 
 
 .c.o:
-	$(CC) $(CFLAGS) $< -g
+	$(CXX) $(CXXFLAGS) $< -g 
 
 
 clean:
